opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mhttp"
dev-repo: "git+https://github.com/robur-coop/mhttp.git"
bug-reports: "https://github.com/robur-coop/mhttp/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.7.0"}
  "mhttp" {= version}
  "mnet-tls"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "An implementation of an HTTP server in OCaml for unikernels"
