opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mhttp"
dev-repo: "git+https://github.com/robur-coop/mhttp.git"
bug-reports: "https://github.com/robur-coop/mhttp/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.7.0"}
  "mnet"
  "mnet-tls"
  "mirage-crypto-rng"
  "httpcats" {>= "0.2.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "An implementation of HTTP in OCaml for unikernels"

pin-depends: [
  [ "httpcats.dev" "git+https://github.com/robur-coop/httpcats.git#6b19476a1fa95cdee34150ba8e4f5636d343b908" ]
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#4e8fd306c305142035f65a1339ca1aa9f011c955" ]
]
